# Jiuyi_TFLN_PDK

./: README.md  config.py  cross_sections.py  export_param_sweep.py  pyproject.toml  tech.py
.github/workflows/: docs.yml
components/: components.py  psi_element.py  substrate.py
components/coupler/: star_coupler.py
components/modulator/: folded_mzm.py  folded_mzm_wg.py  iq_modulator_eh.py  iq_modulator_folded.py  iq_modulator_wg.py  phase_modulator.py  qpsk_modulator.py  straight_mzm_1x1_eh.py  straight_mzm_1x2_eh.py
docs/: conf.py  hfss_tfln_validation_cn.md  index.rst
docs/components/: index.rst
layers/: 2323PDK.lyp  layer_def.py
misc/: aa.py
test_layouts/: example.py  routing_example_test.py  spiral_test.py  test.py  test_layout.py  test_routing.py
tests/: test_components.py
tools/: hfss_tfln_judge.py  hfss_tfln_workflow.py
